--- a/HarpUnitTests/HarpUnitTests.vcxproj
+++ b/HarpUnitTests/HarpUnitTests.vcxproj
@@ -86,7 +86,8 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="HarpLibraryTest.cpp" />
+    <ClCompile Include="HarpNoteChoiceTest.cpp" />
+    <ClCompile Include="HarpNoteDetectionTest.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
